--- a/.travis.yml
+++ b/.travis.yml
@@ -7,28 +7,32 @@ compiler:
 before_install:
   - sudo apt-get update
  
- # TODO is thi necessary? 
-install: 
-  - sudo apt-get install python-dev python-numpy
-  
-  # OpenCV dependencies
+install:
+
+# OpenCV v3.0.0 (beta) install code (modified from orignal source: https://github.com/jayrambhia/Install-OpenCV)
+
+  # OpenCV dependencies - Details available at: http://docs.opencv.org/trunk/doc/tutorials/introduction/linux_install/linux_install.html
   - sudo apt-get install -y build-essential
   - sudo apt-get install -y cmake git libgtk2.0-dev pkg-config libavcodec-dev libavformat-dev libswscale-dev
   - sudo apt-get install -y python-dev python-numpy libtbb2 libtbb-dev libjpeg-dev libpng-dev libtiff-dev libjasper-dev libdc1394-22-dev
 
-before_script:
-  - git clone https://github.com/Itseez/opencv.git
-  - cd opencv
-  - git checkout 2.4
+  # Download v3.0.0 .zip file and extract.
+  - curl -sL https://github.com/Itseez/opencv/archive/3.0.0-beta.zip > opencv.zip
+  - unzip opencv.zip
+  - cd opencv-3.0.0-beta
+  
+  # Create a new 'build' folder.
   - mkdir build
   - cd build
   
   # Set build instructions for Ubuntu distro.
-  #- cmake -D CMAKE_BUILD_TYPE=RELEASE -D CMAKE_INSTALL_PREFIX=/usr/local -D WITH_TBB=ON -D BUILD_NEW_PYTHON_SUPPORT=ON -D WITH_V4L=ON -D INSTALL_C_EXAMPLES=ON -D INSTALL_PYTHON_EXAMPLES=ON -D BUILD_EXAMPLES=ON -D WITH_QT=ON -D WITH_OPENGL=ON ..
-  #- cmake ..
+  - cmake -D CMAKE_BUILD_TYPE=RELEASE -D CMAKE_INSTALL_PREFIX=/usr/local -D WITH_TBB=ON -D BUILD_NEW_PYTHON_SUPPORT=ON -D WITH_V4L=ON -D INSTALL_C_EXAMPLES=ON -D INSTALL_PYTHON_EXAMPLES=ON -D BUILD_EXAMPLES=ON -D WITH_QT=ON -D WITH_OPENGL=ON ..
   
-  - make -j8
-  - sudo make -j8 install
+  # Run 'make' with four threads.
+  - make -j4
+  
+  # Install to OS.
+  - sudo make install
   
   # Add configuration to OpenCV to tell it where the library files are located on the file system (/usr/local/lib)
   - sudo sh -c 'echo "/usr/local/lib" > /etc/ld.so.conf.d/opencv.conf'
@@ -38,16 +42,9 @@ before_script:
   
   # We need to return to the repo "root" folder, so we can then 'cd' into the C++ project folder.
   - cd ../../
-  
-  #- mkdir -p native/linux/x86_64
-  #- cp opencv/build/lib/libopencv_java248.so native/linux/x86_64/libopencv_java248.so
-  #- cp opencv/build/bin/opencv-248.jar .
-  #- jar -cMf opencv-native-248.jar native
-  #- lein2 localrepo install opencv-248.jar opencv/opencv 2.4.8
-  #- lein2 localrepo install opencv-native-248.jar opencv/opencv-native 2.4.8
 
 script:
   - cd [project_dir]
   - cmake .
   - make
-  - ./[application_name] [params]
+- ./[application_name] [params]
